--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-rxjs-state-management": "^1.0.1",
     "react-scripts": "4.0.0",
     "rxjs": "7.6.0"
   },
